# vln_calra_v2

./: .gitignore  Architecture_Documentation.md  README.md  pyproject.toml
docs/: vln_carla2_cli_main_功能总览.md  场景说明.md  点跟踪效果测试.md
docs/carla理解/: WorldSetting介绍.md
scripts/: visualize_tracking_trajectory.py
src/vln_carla2/: __init__.py
src/vln_carla2/adapters/: __init__.py
src/vln_carla2/app/: __init__.py  bootstrap.py  carla_session.py  cli_main.py  container.py  control_container.py  exp_bootstrap.py  operator_bootstrap.py  operator_container.py  scene_editor_container.py  scene_editor_main.py  settings.py  vehicle_ref_parser.py
src/vln_carla2/usecases/: __init__.py  follow_vehicle_topdown.py  input_snapshot.py  move_spectator.py  run_control_loop.py
tests/: conftest.py
tests/integration/: test_control_loop_smoke.py
tests/unit/adapters/: test_cli_main.py  test_cli_mappers.py  test_cli_runtime.py  test_keyboard_input_windows.py  test_vehicle_ref_parser.py
tests/unit/app/: test_app_cli_main.py  test_app_vehicle_ref_parser.py  test_exp_bootstrap.py  test_operator_bootstrap.py  test_scene_editor_main.py  test_settings.py  test_tracking_bootstrap.py
tests/unit/architecture/: test_cli_architecture_guards.py  test_layer_dependencies.py  test_usecase_slice_dependencies.py
tests/unit/domain/: test_astar_grid.py  test_collision_checker.py  test_forbidden_zone_rules.py  test_hybrid_astar_forward.py  test_longitudinal_pid_controller.py  test_motion_primitives.py  test_planning_map.py  test_pose2d.py  test_pure_pursuit_controller.py  test_scene_template.py  (+4 more)
(+237 files in other folders)
